--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,18 @@
     <title>To Do List</title>
   </head>
   <body>
-    <h1>It's a <%= dayOfWeek %>!</h1>
+    <h1><%= kindOfDay %></h1>
+    <ul>
+      <li>Buy Food</li>
+      <li>Cook Food</li>
+      <li>Eat Food</li>
+
+      <form class="" action="/" method="post">
+
+        <input type="text" name="newItem">
+
+        <button type="submit" name="button">Add</button>
+      </form>
+    </ul>
   </body>
 </html>
