post route pushes user submitted new item to array and redirects to route, for loop in ejs file adds new list item for each user submitted task

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
       <li>Buy Food</li>
       <li>Cook Food</li>
       <li>Eat Food</li>
+      <% for (let i = 0; i < newListItems.length; i++) { %>
+        <li> <%= newListItems[i] %> </li>
+      <% } %>
+
+    </ul>
 
       <form class="" action="/" method="post">
 
@@ -17,6 +22,6 @@
 
         <button type="submit" name="button">Add</button>
       </form>
-    </ul>
+
   </body>
 </html>
