--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,11 @@
     <title>To Do List</title>
   </head>
   <body>
-
-    <h1>It's (day)</h1>
+    <% if ( kindOfDay === "Sunday" || kindOfDay === "Monday" ) { %>
+      <h1 style="color: purple"> It's <%= kindOfDay %> </h1>
+    <% } else { %>
+      <h1 style="color: red">It's <%= kindOfDay %> </h1>
+    <% } %>
 
     <ul>
       <li>Buy Food</li>
